--- a/FuturesPriceComparison.PriceChecker/appsettings.json
+++ b/FuturesPriceComparison.PriceChecker/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BinanceApiOptions": {
+    "BaseUrl" : "https://testnet.binancefuture.com"
+  }
 }
