--- a/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
+++ b/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
@@ -9,9 +9,12 @@
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.3" />
         <PackageReference Include="Npgsql.DependencyInjection" Version="9.0.3" />
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
         <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.14.0" />
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.14.0" />
+        <PackageReference Include="Scrutor" Version="6.0.1" />
         <PackageReference Include="Serilog" Version="4.2.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
@@ -19,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\FuturesPriceComparison.Models\FuturesPriceComparison.Models.csproj" />
       <ProjectReference Include="..\FuturesPriceComparison.ServiceDefaults\FuturesPriceComparison.ServiceDefaults.csproj" />
     </ItemGroup>
 
