--- a/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
+++ b/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
@@ -11,6 +11,8 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.3" />
         <PackageReference Include="Npgsql.DependencyInjection" Version="9.0.3" />
+        <PackageReference Include="Polly" Version="8.5.2" />
+        <PackageReference Include="Polly.Extensions" Version="8.5.2" />
         <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
         <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.14.0" />
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.14.0" />
@@ -23,7 +25,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\FuturesPriceComparison.Models\FuturesPriceComparison.Models.csproj" />
-      <ProjectReference Include="..\FuturesPriceComparison.ServiceDefaults\FuturesPriceComparison.ServiceDefaults.csproj" />
     </ItemGroup>
 
 </Project>
