--- a/FuturesPriceComparison.PriceChecker/appsettings.json
+++ b/FuturesPriceComparison.PriceChecker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "BinanceApiOptions": {
-    "BaseUrl" : "https://testnet.binancefuture.com"
+    "BaseUrl" : "https://testnet.binancefuture.come"
   }
 }
