--- a/FuturesPriceComparison.PriceChecker/appsettings.json
+++ b/FuturesPriceComparison.PriceChecker/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "BinanceApiOptions": {
-    "BaseUrl" : "https://testnet.binancefuture.come"
+    "BaseUrl" : "https://testnet.binancefuture.com"
+  },
+  "ScheduleOptions" : {
+    "IntervalInSeconds" : 60
   }
 }
