--- a/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
+++ b/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
@@ -8,8 +8,9 @@
 
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.66" />
+        <PackageReference Include="FluentMigrator" Version="7.1.0" />
+        <PackageReference Include="FluentMigrator.Runner" Version="7.1.0" />
         <PackageReference Include="FluentValidation" Version="11.11.0" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.3" />
         <PackageReference Include="Npgsql.DependencyInjection" Version="9.0.3" />
         <PackageReference Include="Polly" Version="8.5.2" />
