--- a/FuturesPriceComparison.PriceChecker/appsettings.json
+++ b/FuturesPriceComparison.PriceChecker/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Port": 5223
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,6 +13,6 @@
     "BaseUrl" : "https://testnet.binancefuture.com"
   },
   "ScheduleOptions" : {
-    "IntervalInSeconds" : 60
+    "IntervalInSeconds" : 3600
   }
 }
