--- a/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
+++ b/FuturesPriceComparison.PriceChecker/FuturesPriceComparison.PriceChecker.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Polly" Version="8.5.2" />
         <PackageReference Include="Polly.Extensions" Version="8.5.2" />
         <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
         <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.14.0" />
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.14.0" />
         <PackageReference Include="Serilog" Version="4.2.0" />
