--- a/FuturesPriceComparison.PriceChecker/appsettings.json
+++ b/FuturesPriceComparison.PriceChecker/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "AppSettings": {
-    "Port": 5223
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -13,6 +10,6 @@
     "BaseUrl" : "https://testnet.binancefuture.com"
   },
   "ScheduleOptions" : {
-    "IntervalInSeconds" : 3600
+    "Interval" : "01:00:00"
   }
 }
